<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_inicio"
        android:icon="@android:drawable/ic_menu_view"
        android:title="Inicio" />
    <item
        android:id="@+id/nav_menu"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_menu_title" />
    <item
        android:id="@+id/nav_buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Buscar" />
    <item
        android:id="@+id/nav_playlist"
        android:icon="@android:drawable/ic_media_play"
        android:title="Playlist" />
</menu>
