...
            android:layout_height="wrap_content"
            android:text="@string/chip_trash" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:clipToPadding="false" />

...
